<resources>
    <string name="app_name">Voteasy</string>
    <string name="s_t_a_r_t">S T A R T</string>
    <string name="password">password</string>
    <string name="mobile_number">Mobile number</string>

    <string name="confirm_password">Confirm Password</string>
    <string name="l_o_g_i_n">L O G I N</string>
    <string name="email">Email Id</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="s_i_g_n_u_p">S I G N  U P</string>
    <string name="admin">admin</string>
    <string name="voter">voter</string>
    <string name="logo">LOGO</string>
    <string name="candidate">candidate</string>
    <string name="party_name">Party Name</string>
    <string name="candidate_image">Candidate image</string>
    <string name="add_candidate">Candidate Profile</string>
    <string name="enter_name">Enter Name</string>
    <string name="add">Add</string>
</resources>