<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal|center_vertical"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:paddingTop="250dp"
    android:paddingBottom="10dp"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="400dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal|center_vertical"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:layout_marginTop="200dp"
        android:foregroundGravity="bottom"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <Button
            android:id="@+id/voterbtn"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_background2"
            android:text="@string/voter"
            android:textSize="18sp"
            android:elevation="35dp"
            />

        <Button
            android:id="@+id/adminbtn"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_background2"
            android:text="@string/admin"
            android:textSize="18sp"
            android:elevation="35dp"
            />

    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>